--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "image-size": "^1.0.1",
     "jasmine": "^3.10.0",
     "jasmine-spec-reporter": "^7.0.0",
     "sharp": "^0.30.4",
